# gon

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
resources/: tray.rc
scripts/: gen_self_sign.ps1  pack.ps1  pack_and_run.ps1
src/: client.rs  main.rs  tray.rs
src/daemon/: misc.rs  mod.rs  node.rs  protocol.rs  service.rs
src/notification/: linux.rs  mod.rs  windows.rs
src/tray/: linux.rs  mod.rs  windows.rs
