[package]
name = "gon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
futures = "0.3.25"
futures-util = "0.3.31"
log = "0.4.26"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.11"
tokio-util = { version = "0.7.4", features = ["rt"] }
windows-future = "0.1.1"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.60.0", features = [
  "UI_Notifications_Management",
  "Foundation_Collections",
  "ApplicationModel",
  "Storage_Streams",
  "Graphics_Imaging",
]}
